# EMBEDDED_SIMULATOR

./: .gitignore  CMakeLists.txt  COMPLETE_PROJECT_GUIDE.md  EMBEDDED_SYSTEMS_EXPLAINED.md  Makefile  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  prep.md
docs/: .gitkeep
examples/: .gitkeep
include/drivers/: virtual_device.h
include/rtos/: task.h
include/sdk/: button.h  led.h  peripheral.h  sensor.h  uart.h
src/: main.cpp
src/drivers/: virtual_device.cpp
src/rtos/: task.cpp
src/sdk/: button.cpp  led.cpp  peripheral.cpp  sensor.cpp  uart.cpp
tests/: .gitkeep
